<resources>
    <string name="app_name">lab2</string>
    <string name="action_edit">Edit</string>
    <string name="action_launch">Launch</string>
    <string name="action_delete">Delete</string>
    <string name="action_preview">Preview</string>
    <string name="prepare">Prepare</string>
    <string name="work">Work</string>
    <string name="rest">Rest</string>
    <string name="cool_down">Cool Down</string>
    <string name="repeat">Repeat(Work &amp; Rest)</string>
    <string name="add_above">Add above</string>
    <string name="add_below">Add below</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="changes_dialog">There are unsaved changes. Save them?</string>
    <string name="cancel">Cancel</string>
    <string name="color">Color</string>
    <string name="save">Save</string>
    <string name="select_color">Select a color</string>
    <string name="dots">...</string>
    <string name="repeat_info">Repeat section only allowed to be placed after both Work and Rest sections.</string>
    <string name="work_rest_info">Repeat section must follow Work &amp; Rest sections. Change or delete it firstly</string>
    <string name="titleLabel">"Title: "</string>
    <string name="repetitionsLabel">"Repetitions: "</string>
    <string name="nightTheme">Night Theme</string>
    <string name="lang">Language</string>
    <string name="eng">English</string>
    <string name="rus">Русский</string>
    <string name="fontsize">Font size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="splash_message">Workout app by Alexander Zaletilo</string>
    <string name="total">total</string>
    <string name="intervals">intervals</string>
    <string name="sets">sets</string>
    <string name="sec">sec</string>
    <string name="reps_short">reps</string>
    <string name="workouts_plural">Workouts</string>
    <string name="workouts_single">Workout</string>
    <string name="phase">phase</string>
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="next">next</string>
    <string name="prev">prev</string>
    <string name="zero_intervals">To launch workout you need at least 1 interval</string>
</resources>